force-app/main/default/objects/PLM_Author__c/PLM_Author__c.object-meta.xml
<CustomObject>
    <label>Author</label>
    <nameField>
        <label>Author Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Authors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>