force-app/main/default/objects/PLM_Author__c/fields/BPM_Department_Name__c.field-meta.xml
<CustomField>
    <fullName>BPM_Department_Name__c</fullName>
    <label>BPM Department Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>