force-app/main/default/objects/PLM_Author__c/fields/Bus_Canadian_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Bus_Canadian_Post_Code__c</fullName>
    <label>Bus.Canadian Post Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>