force-app/main/default/objects/PLM_Author__c/fields/Bus_Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Bus_Telephone_Number__c</fullName>
    <label>Bus.Telephone Number</label>
    <type>Phone</type>
</CustomField>