force-app/main/default/objects/PLM_Author__c/fields/Degree_From__c.field-meta.xml
<CustomField>
    <fullName>Degree_From__c</fullName>
    <label>Degree From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>