force-app/main/default/objects/PLM_Author__c/fields/EMail_Address_Number__c.field-meta.xml
<CustomField>
    <fullName>EMail_Address_Number__c</fullName>
    <label>EMail Address Number</label>
    <type>Email</type>
</CustomField>