force-app/main/default/objects/PLM_Author__c/fields/Home_Address_Government_c__c.field-meta.xml
<CustomField>
    <fullName>Home_Address_Government_c__c</fullName>
    <label>Home Address Government c</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>