force-app/main/default/objects/PLM_Author__c/fields/Home_Address_Province__c.field-meta.xml
<CustomField>
    <fullName>Home_Address_Province__c</fullName>
    <description>Address Province</description>
    <label>Home Address Province</label>
    <length>50</length>
    <type>Text</type>
</CustomField>