force-app/main/default/objects/PLM_Author__c/fields/Home_Address_Zip_Code_2__c.field-meta.xml
<CustomField>
    <fullName>Home_Address_Zip_Code_2__c</fullName>
    <label>Home Address Zip Code 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>