force-app/main/default/objects/PLM_Author__c/fields/Home_Canadian_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Home_Canadian_Post_Code__c</fullName>
    <label>Home Canadian Post Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>