force-app/main/default/objects/PLM_Author__c/fields/Home_FAX_no__c.field-meta.xml
<CustomField>
    <fullName>Home_FAX_no__c</fullName>
    <label>Home FAX no</label>
    <type>Phone</type>
</CustomField>