force-app/main/default/objects/PLM_Author__c/fields/Home_Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Home_Telephone_Number__c</fullName>
    <label>Home Telephone Number</label>
    <type>Phone</type>
</CustomField>