force-app/main/default/objects/PLM_Author__c/fields/PHD_year__c.field-meta.xml
<CustomField>
    <fullName>PHD_year__c</fullName>
    <label>PHD year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>