force-app/main/default/objects/PLM_Author__c/fields/Province_code__c.field-meta.xml
<CustomField>
    <fullName>Province_code__c</fullName>
    <label>Province code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>