force-app/main/default/objects/PLM_Author__c/fields/Second_Initial__c.field-meta.xml
<CustomField>
    <fullName>Second_Initial__c</fullName>
    <label>Second Initial</label>
    <length>250</length>
    <type>Text</type>
</CustomField>