force-app/main/default/objects/PLM_Author__c/fields/Univ_PID__c.field-meta.xml
<CustomField>
    <fullName>Univ_PID__c</fullName>
    <label>Univ (PID)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>