force-app/main/default/objects/PLM_Author__c/fields/Zip_code_key_2__c.field-meta.xml
<CustomField>
    <fullName>Zip_code_key_2__c</fullName>
    <label>Zip code key 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>